# CloudBoard

./: .dockerignore  .gcloudignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  app.yaml  clipboard-daemon.cpp  deploy-run.bash  deploy-secrets.bash  go.mod  go.sum  main.go  sample.env
client/: CMakeLists.txt  clipboard-daemon.cpp  go.mod  go.sum  main.go  signup.cpp  utils.cpp  utils.h
controllers/: clipboardController.go  userController.go
initializers/: connectTcp.go  connectToDB.go  connectToRedis.go  loadEnvVariables.go  syncDatabase.go  upgradeConnToWS.go
middleware/: requireAuth.go
models/: userModel.go
utils/: connectTcp.go  token.go
